set up react-router, and some code refactor

--- a/public/shop.html
+++ b/public/shop.html
@@ -503,34 +503,7 @@
           </div>
         </div><!-- END desktop menu -->
       </div>
-      <main id="brand-collection" class="page">
-        <div class="area-container">
-          <div class="pos-relative">
-            <h1 class="divider GNB-line">Wine & spirits</h1>
-            <div class="arrow-wines-spirits"></div>
-          </div><!-- breadcrumb -->
-          <nav class="breadcrumb">
-            <ul class="list">
-              <li class="element"><a href="#">Home</a></li>
-              <li class="element divider"><a href="#">Wine &amp; Spirits</a></li>
-            </ul>
-          </nav><!-- END breadcrumb --><!-- Brand details -->
-          <div class="kiwi-grid divider">
-            <div class="kiwi-col l-7-16 m-1">
-              <div class="block img"><img src="http://placehold.it/450x280" class="fade-in"></div>
-            </div>
-            <div class="kiwi-col l-9-16 m-1">
-              <div class="block details">
-                <div class="title">Chateau Beychevelle</div>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris euismod, erat non porttitor consequat, dolor enim molestie eros, ut fringilla augue urna sit amet felis. Quisque imperdiet orci at nulla sodales, et porttitor leo porta. Nullam neque arcu, mollis bibendum lobortis non, mattis in lorem. Aliquam nec mollis turpis. Ut vulputate pellentesque gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed consectetur elit quis lectus dapibus, sed tincidunt nisi elementum.</p>
-                <p class="discover">Discover the latest collection at your nearest <a href="#" class="underline">DFS store</a>.</p>
-              </div>
-            </div>
-          </div><!-- END Brand details -->
-          <!-- Product listing -->
-          <div id="product-listing"></div><!-- END Product listing -->
-        </div>
-      </main>
+      <main id="app-container"></main>
       <div class="area-container mobile-full-width"><!-- promotions -->
         <div class="promotions black">
           <div class="kiwi-grid">
