setup header shoppingbag icon behaviour

--- a/public/shop.html
+++ b/public/shop.html
@@ -315,13 +315,7 @@
                   <p>Sign in to see your Wish List</p><a class="button black">Sign in</a>
                 </div>
               </div>
-              <div class="li tab shopping-bag">
-                <div class="title img"><a href="./shoppingbag-detail.html"><i class="icon icon-shoppingbag-white-base64"></i></a></div>
-                <div class="content against-right empty"> 
-                  <p class="strong">Your bag is empty</p>
-                  <p>We currently offer the ability to Shop & Collect purchases in our Wine & Spirits.</p><a class="button action">Shop Wines & Spirits</a>
-                </div>
-              </div>
+              <div id="react-shoppingbag" class="li tab shopping-bag"></div>
               <div class="li tab desktop-searchbox kiwi-hidden-m kiwi-hidden-s"><span class="placeholderWrap">&nbsp Search</span>
                 <input placeholder=" Search" type="search" name="search" class="search_text">
               </div>
