--- a/public/shop.html
+++ b/public/shop.html
@@ -15,6 +15,13 @@
     <link rel="stylesheet" href="styles/main.css">
     <script src="scripts/vendor/modernizr/custom.min.js"></script><!--[if (gte IE 6)&(lte IE 8)]>
     <script src="scripts/vendor/selectivizr/selectivizr-min.js"></script><![endif]-->
+    <script>
+      var productCategoryList = {
+        wine: ["Red", "White", "Dessert", "Rose", "Champagne/Sparkling"],
+        spirit: ["cognac", "whiksy", "vodka", "rum", "gin", "baijiu", "Tequila"],
+        beer: []
+      }
+    </script>
   </head>
   <body><!-- mobile menu -->
     <div id="mobile-menu" class="mobile-left-menu expand-menu">
