--- a/public/shop.html
+++ b/public/shop.html
@@ -17,7 +17,7 @@
     <script src="scripts/vendor/selectivizr/selectivizr-min.js"></script><![endif]-->
     <script>
       var productCategoryList = {
-        wine: ["Red", "White", "Dessert", "Rose", "Champagne/Sparkling"],
+        wine: ["red", "white", "dessert", "rose", "Champagne/Sparkling"],
         spirit: ["cognac", "whiksy", "vodka", "rum", "gin", "baijiu", "Tequila"],
         beer: []
       }
