--- a/public/shop.html
+++ b/public/shop.html
@@ -18,7 +18,7 @@
     <script>
       var productCategoryList = {
         wine: ["red", "white", "dessert", "rose", "Champagne/Sparkling"],
-        spirit: ["cognac", "whiksy", "vodka", "rum", "gin", "baijiu", "Tequila"],
+        spirit: ["cognac", "whisky", "vodka", "rum", "gin", "baijiu", "Tequila"],
         beer: []
       }
     </script>
